<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical"
        android:paddingBottom="13.3dp"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="25dp"
        android:clipToPadding="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16.7dp"
            android:fontFamily="@font/sfpro_display_medium"
            android:text="@string/salad"
            android:textColor="@color/black"
            android:textSize="14.3sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="13.3dp"
            android:layerType="software"
            android:src="@drawable/dotted" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14.7dp"
            android:fontFamily="@font/sfpro_display_medium"
            android:text="@string/rice"
            android:textColor="@color/black"
            android:textSize="14.3sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="13.3dp"
            android:layerType="software"
            android:src="@drawable/dotted" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14.7dp"
            android:fontFamily="@font/sfpro_display_medium"
            android:text="@string/roti_s"
            android:textColor="@color/black"
            android:textSize="14.3sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="13.3dp"
            android:layerType="software"
            android:src="@drawable/dotted" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14.7dp"
            android:fontFamily="@font/sfpro_display_medium"
            android:text="@string/parathas"
            android:textColor="@color/black"
            android:textSize="14.3sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="13.3dp"
            android:layerType="software"
            android:src="@drawable/dotted" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14.7dp"
            android:fontFamily="@font/sfpro_display_medium"
            android:text="@string/butter_milk"
            android:textColor="@color/black"
            android:textSize="14.3sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="13.3dp"
            android:layerType="software"
            android:src="@drawable/dotted" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14.7dp"
            android:fontFamily="@font/sfpro_display_medium"
            android:text="@string/punjabi_sabji"
            android:textColor="@color/black"
            android:textSize="14.3sp" />
    </LinearLayout>
</LinearLayout>