<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="28.7dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/pavbhaji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pavbhaji" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:fontFamily="@font/sfpro_display_semibold"
            android:letterSpacing="0.0525"
            android:text="@string/santushti_smoothies_and_shakes"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.5dp"
            android:fontFamily="@font/sfpro_display_medium"
            android:text="@string/north_indian"
            android:textColor="@color/silver"
            android:textSize="11.7sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.5dp"
            android:fontFamily="@font/sfpro_display_medium"
            android:letterSpacing="0.0525"
            android:text="@string/fatehgunj"
            android:textColor="@color/gray"
            android:textSize="11sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginTop="10.8dp"
            android:background="@color/viewline" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_star_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:fontFamily="@font/sfpro_display_medium"
                android:letterSpacing="0.0525"
                android:text="@string/_4_6"
                android:textColor="@color/blue"
                android:textSize="11.3sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="@font/sfpro_display_medium"
                android:letterSpacing="0.0525"
                android:text="@string/deliver_in_20_min"
                android:textColor="@color/silver"
                android:textSize="11.3sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>