<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".LoginScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.7dp"
        android:layout_marginRight="16.7dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:paddingTop="18.5dp"
            android:fontFamily="@font/sfpro_text_medium"
            android:text="SKIP"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7.7dp"
            android:fontFamily="@font/sfpro_text_medium"
            android:text="@string/welcome_to"
            android:textColor="@color/gray"
            android:textSize="14.3sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_text_heavy"
            android:text="@string/star_delivery"
            android:textColor="@color/black"
            android:textSize="28.7sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:fontFamily="@font/sfpro_display_semibold"
            android:letterSpacing="0.0525"
            android:text="@string/login_to_your_account"
            android:textColor="@color/black"
            android:textSize="11sp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="28.3dp"
            android:background="@color/transferent"
            android:fontFamily="@font/sfpro_text_medium"
            android:hint="kevin@wolfsoft.in"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="13.3sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="7.7dp"
            android:background="@color/lightsilver" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/transferent"
                android:fontFamily="@font/roboto_regular"
                android:hint="················"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="13.3sp" />

            <FrameLayout
                android:id="@+id/frame_eye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <ImageView
                    android:id="@+id/password_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_eye2"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/password_hide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_eye1"
                    android:visibility="visible" />
            </FrameLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="-12dp"
            android:background="@color/lightsilver" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="19.3dp"
            android:fontFamily="@font/sfpro_text_medium"
            android:text="@string/forgot_password"
            android:textAlignment="textEnd"
            android:textColor="@color/orange"
            android:textSize="12.3sp" />

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28.5dp"
            android:background="@drawable/ripple_orange"
            android:fontFamily="@font/sfpro_text_medium"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18.3sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginTop="26dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32.8dp"
            android:fontFamily="@font/sfpro_display_semibold"
            android:letterSpacing="0.0425"
            android:text="@string/continue_with_social_accounts"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="29.7dp"
            android:layout_marginTop="26.3dp"
            android:layout_marginRight="29.7dp"
            android:background="@drawable/rectangle_lightblue"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="21dp"
                android:src="@drawable/ic_facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="31dp"
                android:fontFamily="@font/sfpro_display_medium"
                android:letterSpacing="0.0525"
                android:paddingTop="8dp"
                android:paddingBottom="10dp"
                android:text="@string/continue_with_facebook"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="29.7dp"
            android:layout_marginTop="10.7dp"
            android:layout_marginRight="29.7dp"
            android:background="@drawable/rectangle_red"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="21dp"
                android:src="@drawable/ic_google_plus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/sfpro_display_medium"
                android:letterSpacing="0.0525"
                android:paddingTop="8dp"
                android:paddingBottom="10dp"
                android:text="@string/continue_with_google"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpro_display_medium"
                android:letterSpacing="0.0325"
                android:text="@string/dont_have_an_account"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/create_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sfpro_display_semibold"
                    android:letterSpacing="0.0325"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/create_now"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.8dp"
                    android:layout_marginTop="3.5dp"
                    android:background="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>