<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="23.7dp"
        android:layout_marginRight="15dp"
        android:layerType="software"
        android:src="@drawable/dotted"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27.7dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/pavbhaji_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pavbhaji" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/pavbhaji_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpro_text_semibold"
                android:text="@string/pavbhaji_2x_extra_bun_4x"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/sfpro_display_medium"
                android:letterSpacing="0.0525"
                android:text="@string/_10_january_2019"
                android:textColor="@color/gray"
                android:textSize="12.7sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/sfpro_display_medium"
                android:letterSpacing="0.0525"
                android:text="₹ 220"
                android:textColor="@color/gray"
                android:textSize="12sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:background="@drawable/rectangle_silver_cure"
                android:fontFamily="@font/sfpro_display_medium"
                android:letterSpacing="0.0325"
                android:paddingLeft="15dp"
                android:paddingTop="8dp"
                android:paddingRight="15dp"
                android:paddingBottom="8dp"
                android:text="@string/re_order"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="23.8dp"
                android:layout_marginRight="16.5dp"
                android:background="@color/viewline" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>